# cpp_refined

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml
include/rvarago/: error.hpp  refined.hpp
test/: CMakeLists.txt  refined_test.cpp
